// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render default - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render inputHeight80 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 80px;"
  />
</div>
`;

exports[`Render labelHeight40 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 40px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render labelWidth80 - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 80px; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render labelfalse - value[0] 1`] = `
<div>
  <div
    class="skeleton emotion-0"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render sizedefault - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 32px;"
  />
</div>
`;

exports[`Render sizelarge - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 40px;"
  />
</div>
`;

exports[`Render sizesmall - value[0] 1`] = `
.emotion-0 {
  margin-bottom: 10px;
}

<div>
  <div
    class="skeleton emotion-0"
    style="width: 30%; height: 20px;"
  />
  <div
    class="skeleton emotion-1"
    style="width: 100%; height: 24px;"
  />
</div>
`;
